deploy: 25cbd03587032349e00ddf9f8007351f74725f01

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UI Generator | UI Transformer</title>
   <meta name="description" content="UI Transformer by L Y Я A - Konversi desain ke Tailwind CSS dengan AI.">
-  <link rel="canonical" href="https://daffadevhosting.github.io/generate/">
+  <link rel="canonical" href="https://daffadevhosting.github.io/">
 
-  <link type="application/atom+xml" rel="alternate" href="https://daffadevhosting.github.io/generate/feed.xml" title="UI Generator" />
+  <link type="application/atom+xml" rel="alternate" href="https://daffadevhosting.github.io/feed.xml" title="UI Generator" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -211,14 +211,14 @@ gsap.fromTo(
       <main class="glassmorph flex-1 flex flex-col overflow-hidden">
         <div id="topbar" class="flex items-center justify-between p-4 border-b border-gray-700">
   <div class="text-sm text-gray-400 truncate">
-    <a href="/generate/">
+    <a href="/">
     <i class="fa-solid fa-code text-blue-400"></i>
     UI Generator <span class="font-bold text-blue-400">(L Y Я A)</span>
     </a>
   </div>
   <div class="flex items-center gap-3">
   
-    <a href="/generate/pricing" class="text-sm bg-pink-700 hidden md:block text-white px-3 py-1 rounded">Upgrade PRO</a>
+    <a href="/pricing" class="text-sm bg-pink-700 hidden md:block text-white px-3 py-1 rounded">Upgrade PRO</a>
   
     <img src="https://placehold.co/32x32" alt="Profile" class="rounded-full w-8 h-8">
   </div>
