deploy: f1db1da11aab745efe6135930665ef3b76ccc952

--- a/pricing.html
+++ b/pricing.html
@@ -154,6 +154,10 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
     <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
   </div>
   
+      <!-- Tombol Chat -->
+      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline transition">
+        <i class="fas fa-comment-dots text-2xl"></i>
+      </button>
   <button onclick="openTermsModal()" title="term & faq" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
   <i class="fa-solid fa-circle-question text-2xl"></i>
   </button>
