--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
     <i class="fa-solid fa-gear text-2xl"></i>
   </button>
   
+      <!-- Tombol Chat -->
+      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline transition">
+        <i class="fas fa-comment-dots text-2xl"></i>
+      </button>
   <button onclick="openTermsModal()" title="term & faq" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
   <i class="fa-solid fa-circle-question text-2xl"></i>
   </button>
