--- a/index.html
+++ b/index.html
@@ -175,19 +175,19 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   <div class="space-y-2 text-sm text-gray-300">
     <label class="flex items-center gap-2 cursor-pointer">
       <input type="radio" name="model" value="basic" class="accent-blue-500" checked />
-      qwen1.5-0 - Element Sederhana <span class="text-yellow-500 text-xs ml-1">FREE 2x only</span>
+      qwen1.5-0 - Element Sederhana <span class="text-yellow-500 text-xs ml-1">FREE 2x</span>
     </label>
     <label class="flex items-center gap-2 cursor-pointer">
       <input type="radio" name="model" value="medium" class="accent-blue-500" disabled />
-      llama-3.2-1b - Komponen Responsive <span class="text-yellow-500 text-xs ml-1">MEDIUM only</span>
+      llama-3.2-1b - Komponen Responsive <span class="text-yellow-500 text-xs ml-1">MEDIUM</span>
     </label>
     <label class="flex items-center gap-2 cursor-pointer">
       <input type="radio" name="model" value="advanced" class="accent-blue-500" disabled />
-      mistral-small-3.1 - Layout Modular <span class="text-yellow-500 text-xs ml-1">ADVANCE only</span>
+      mistral-small-3.1 - Layout Modular <span class="text-yellow-500 text-xs ml-1">ADVANCE</span>
     </label>
     <label class="flex items-center gap-2 cursor-pointer">
       <input type="radio" name="model" value="expert" class="accent-blue-500" disabled />
-      deepseek-r1 - Full Page Elegan <span class="text-yellow-500 text-xs ml-1">EXPERT only</span>
+      deepseek-r1 - Full Page Elegan <span class="text-yellow-500 text-xs ml-1">EXPERT</span>
     </label>
   </div>
 <div id="coding-mode-toggle" class="mt-4 bg-[#1E1E1E] p-3 rounded-lg border border-gray-700">
