--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
         id="transform-button"
         class="cursor-pointer w-10 h-10 absolute bottom-3 right-2 text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2"
         title="Generate UI"
-      ><i class="fa-solid fa-wand-magic-sparkles"></i>
+      ><i class="fa-solid fa-wand-magic-sparkles text-2xl"></i>
       </button>
     </div>
   </div>
@@ -726,7 +726,7 @@ if (frame?.src?.startsWith("blob:")) {
       </main>
         <!-- Chat Container -->
 <div id="chat-container"
-  class="hidden fixed sm:bottom-20 sm:right-6 sm:w-[380px] sm:h-auto sm:rounded-2xl w-screen h-screen md:top-4 md:right-4 z-[60] bg-[#1a1d22] border border-gray-700 text-white shadow-2xl backdrop-blur-md flex flex-col overflow-hidden">
+  class="hidden fixed sm:bottom-20 sm:right-6 sm:w-[380px] sm:h-auto sm:rounded-2xl w-screen h-screen md:top-4 md:left-24 z-[60] bg-[#1a1d22] border border-gray-700 text-white shadow-2xl backdrop-blur-md flex flex-col overflow-hidden">
 
   <!-- Chat Header -->
   <div class="bg-gradient-to-r from-purple-600 to-indigo-600 p-4 text-white flex items-center">
@@ -745,7 +745,7 @@ if (frame?.src?.startsWith("blob:")) {
   </div>
 
   <!-- Chat Messages -->
-  <div class="flex-1 overflow-y-auto p-4 bg-gray-50 text-gray-800">
+  <div id="output-chat" class="flex-1 overflow-y-auto p-4 bg-gray-50 text-gray-800">
     <div class="message-box rounded-2xl p-4 bg-white shadow-md">
       <div class="flex items-start mb-2">
         <div class="w-8 h-8 rounded-full bg-purple-100 flex items-center justify-center mr-2">
@@ -792,12 +792,13 @@ if (frame?.src?.startsWith("blob:")) {
   </div>
 
   <!-- Input Area -->
-  <div class="border-t p-4 bg-white">
+  <div class="sticky bottom-0 border-t p-4 bg-white">
     <div class="relative">
       <input 
+        id="input-chat"
         type="text" 
         placeholder="Ketik pesan Anda..." 
-        class="w-full py-3 px-4 pr-12 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"
+        class="w-full py-3 px-4 pr-12 rounded-full border text-gray-700 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"
       >
       <button class="absolute right-2 top-1/2 transform -translate-y-1/2 w-8 h-8 rounded-full bg-gradient-to-r from-purple-600 to-indigo-600 text-white flex items-center justify-center">
         <i class="fas fa-paper-plane text-sm"></i>
@@ -851,7 +852,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <script>
-const API_URL = "https://api-ai.d-adityadwiputraramadhan.workers.dev/";
+const BACK_URL = "https://api-ai.d-adityadwiputraramadhan.workers.dev/";
 
 const chatContainer = document.querySelector("#chat-container");
 const chatInput = chatContainer.querySelector("input[type='text']");
@@ -884,7 +885,7 @@ async function sendMessage(message) {
   try {
     const prompt = buildPrompt(message);
 
-    const res = await fetch(API_URL, {
+    const res = await fetch(BACK_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ prompt })
@@ -964,7 +965,7 @@ chatInput.addEventListener("keydown", (e) => {
         <ol class="list-decimal pl-8 text-base text-gray-300 space-y-3 leading-relaxed">
           <li>Masukkan perintah desain atau komponen yang Anda inginkan pada kolom input yang tersedia.</li>
           <li>Pilih model AI preferensi Anda melalui pengaturan (ikon gear) untuk hasil optimal.</li>
-          <li>Tekan tombol <strong>“Generate UI”</strong> dan biarkan AI kami bekerja magic-nya.</li>
+          <li>Tekan tombol <strong><i class="fa-solid fa-wand-magic-sparkles"></i></strong> dan biarkan AI kami mengerjakan magic-nya.</li>
           <li>Hasilnya akan segera muncul di panel editor; Anda bisa melihat pratinjau, mengedit, atau menyimpannya.</li>
           <li>Gunakan tombol <strong>“Download”</strong> jika Anda ingin menyimpan hasil akhir sebagai file HTML.</li>
         </ol>
